removed deprecated code + fixed some warnings